gccida/c3/emit_stack_restore
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_stack_restore/src/explow.c:1495:27: error: must use 'enum' tag to refer to type 'save_level'
void  emit_stack_restore( save_level save_level, rtx sa, rtx after) 
                          ^
                          enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_stack_restore/src/explow.c:1530:26: error: use of undeclared identifier 'machine_mode'
if ( memory_address_p( ( machine_mode)BYTE2( v5), rtwint) ) 
                         ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_stack_restore/src/obj/explow.o] Error 1
